chore: updated JNIILBootstrap comment. [ci skip]